--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,12 +2,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: library-app-ingress
+  annotations:
+    kubernetes.io/ingress.class: "nginx"  
 spec:
   rules:
     - host: library.local
       http:
         paths:
-          - path: /login
+          - path: /
             pathType: Prefix
             backend:
               service:
