--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,8 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: library-app-ingress
-  annotations:
-    kubernetes.io/ingress.class: "nginx"  
+ annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_cookie_domain localhost library.local;
 spec:
   rules:
     - host: library.local
